tdf#118564 sw/ww8filter - map NFC 11 to SVX_NUM_NUMBER_LOWER_ZH.

The attribute name of the numbering format code  11 is "japaneseCounting"
[1]. Although it seemd like a Japanese counting guessing from its name,
it's actually use the same characters used by Chinese lower numbers [2].

Ref:
[1]https://msdn.microsoft.com/en-us/library/dd923798(v=office.12).aspx
[2]https://msdn.microsoft.com/en-us/library/dd772856(v=office.12).aspx

Change-Id: I241be1e5e118197207cbc51334272b532e23c25f
Reviewed-on: https://gerrit.libreoffice.org/57138
Tested-by: Jenkins
Reviewed-by: Mark Hung <marklh9@gmail.com>